--- a/settings/index.html
+++ b/settings/index.html
@@ -7,6 +7,7 @@
 	<h1>Ubiquiti SSH devices</h1>
 	<p>This application allows direct access to your Ubiquiti device without the need of the Unifi controller to be installed</p>
 	<p>You can use the same username/password combination as used in the Ubiquiti mobile application.</p>
+	<p id="error" style="color: red;"></p>
 	<fieldset>
 		<legend>Accespoint SSH Settings</legend>
 		<div class="field row">
@@ -27,8 +28,8 @@
 			<p style="margin-top: 5px; font-size: 0.8em">The password of your Ubiquiti device (default is ubnt).</p>
 		</div>
 		<div class="field row">
-			<label for="polltimer">Poll intervall</label>
-			<select id="polltimer"></select>
+			<label for="polltime">Poll intervall</label>
+			<select id="polltime"></select>
 			<p style="margin-top: 5px; font-size: 0.8em">The amount of time in minutes between device queries.</p>
 		</div>
 	</fieldset>
@@ -39,33 +40,31 @@
 <script type="text/javascript">
 
 	function onHomeyReady(){
-		Homey.get('hostname', function(err, data) {
-			document.getElementById('hostname').value = data;
-		});
-		Homey.get('username', function(err, data) {
-			document.getElementById('username').value = data;
-		});
-		Homey.get('password', function(err, data) {
-			document.getElementById('password').value = data;
-		});
-		Homey.get('polltimer', function(err, data) {
+
+		Homey.get('connection', (err, data) => {
+			if (data) {
+				document.getElementById('hostname').value = data.hasOwnProperty('hostname') ? data['hostname'] : '';
+				document.getElementById('username').value = data.hasOwnProperty('username') ? data['username'] : '';
+				document.getElementById('password').value = data.hasOwnProperty('password') ? data['password'] : '';
+			}
 			for (i = 1; i < 100; i++) {
-				if (data == i) {
-					$("#polltimer").append(`<option value="${i}" selected>${i} min</option>`);
+				if (data.hasOwnProperty('polltime') && data.polltime == i) {
+					$("#polltime").append(`<option value="${i}" selected>${i} min</option>`);
 				} else {
-					$("#polltimer").append(`<option value="${i}">${i} min</option>`);
+					$("#polltime").append(`<option value="${i}">${i} min</option>`);
 				}
 			}
 		});
-
 		Homey.ready();
 	}
 
 	function save() {
-		Homey.set('hostname', document.getElementById('hostname').value);
-		Homey.set('username', document.getElementById('username').value);
-		Homey.set('password', document.getElementById('password').value);
-		Homey.set('polltimer', document.getElementById('polltimer').value);
+		Homey.set('connection', {
+			hostname: document.getElementById('hostname').value,
+			username: document.getElementById('username').value,
+			password: document.getElementById('password').value,
+			polltime: document.getElementById('polltime').value,
+		});
 		Homey.get(function(err, settings){
 			if(err) return console.error('Could not get all settings', err);
 			console.log('all settings', settings);
