Add app trigger flows and improved debug support

--- a/settings/index.html
+++ b/settings/index.html
@@ -4,7 +4,7 @@
 	<script type="text/javascript" src="/manager/webserver/assets/js/jquery.js"></script>
 </head>
 <body>
-	<h1>Ubiquiti SSH devices</h1>
+	<h1>Ubiquiti UniFi</h1>
 	<p>This application allows direct access to your Ubiquiti device without the need of the Unifi controller to be installed</p>
 	<p>You can use the same username/password combination as used in the Ubiquiti mobile application.</p>
 	<p id="error" style="color: red;"></p>
